feat: append correct metadata
