# nota.auth/internal/api/access_api.go
@@ -6,6 +6,7 @@ import (
 
 	"google.golang.org/grpc/codes"
 	"google.golang.org/grpc/status"
+	"nota.auth/internal/interceptor"
 	"nota.auth/internal/service"
 	"nota.auth/pkg/jwt"
 	pb "nota.auth/pkg/pb/v1"
@@ -30,12 +31,9 @@ func (h *AccessServiceHandler) ValidateToken(
 	ctx, span := telemetry.StartSpan(ctx, "AccessHandler.ValidateToken")
 	defer span.End()
 
-	if req.AccessToken == "" {
-		telemetry.RecordError(span, errors.New("access token is required"))
-		return nil, status.Error(codes.InvalidArgument, "access token is required")
-	}
+	accessToken := interceptor.GetAccessTokenStr(ctx)
 
-	userID, err := h.service.Access.Validate(ctx, req.AccessToken)
+	userID, err := h.service.Access.Validate(ctx, accessToken)
 	if err != nil {
 		telemetry.RecordError(span, err)
 
